<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/r80"
                android:scaleType="fitXY"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/activity_horizontal_layout"
                android:layout_marginRight="@dimen/activity_horizontal_layout"
                android:text="Pesawat R80"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_flight_white_24dp"
                android:drawableLeft="@drawable/ic_flight_white_24dp" />
                android:padding="1dp"
                android:drawablePadding="4dp"
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_layout"
            android:layout_marginRight="@dimen/activity_horizontal_layout"
            android:layout_marginBottom="@dimen/activity_vertical_layout"
            android:layout_marginTop="@dimen/activity_vertical_layout"
            android:text="B. J. Habibie"
            android:textSize="32sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Presiden ke-3 Indonesia"
            android:layout_marginBottom="@dimen/activity_vertical_layout"
            android:layout_marginRight="@dimen/activity_horizontal_layout"
            android:layout_marginLeft="@dimen/activity_horizontal_layout"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_layout"
            android:layout_marginLeft="@dimen/activity_horizontal_layout"
            android:layout_marginBottom="@dimen/activity_vertical_layout"
            android:text="@string/content_text"
            android:textColor="@android:color/black"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_layout"
                android:layout_marginRight="@dimen/activity_horizontal_layout"
                android:layout_marginBottom="@dimen/activity_vertical_layout">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nama"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="8sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TTL"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="8sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/TTL"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Jabatan"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="8sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jabatan"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Penemuan"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="8sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/penemuan"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_weight="1"/>
                </TableRow>
            </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donasi"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/activity_horizontal_layout"
            android:layout_marginBottom="@dimen/activity_vertical_layout"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_layout"
            android:layout_marginRight="@dimen/activity_horizontal_layout"
            android:layout_marginBottom="@dimen/activity_vertical_layout">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_R80"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_vertical_layout"
                android:layout_marginRight="@dimen/activity_horizontal_layout"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/img_R80"
                android:layout_toRightOf="@id/img_R80"
                android:text="@string/ajakan"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_donasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_layout"
            android:layout_marginLeft="@dimen/activity_horizontal_layout"
            android:layout_marginRight="@dimen/activity_horizontal_layout"
            android:text="Donasi" />
    </LinearLayout>
</ScrollView>